[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "solaris"
version = "103.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anycrc>=1.3.5",
  "click>=8.2.1",
  "httpx>=0.28.1",
  "openapi-pydantic>=0.5.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "seerapi-models>=103.2.0,<104.0.0",
  "sqlmodel>=0.0.24",
  "tqdm>=4.67.1",
  "xmltodict>=1.0.2",
]

[project.scripts]
solaris = "solaris.__main__:main"

[tool.uv.build-backend]
module-root = ""
module-name = "solaris"

# [tool.uv.sources]
# seerapi-models = { path = "../models", editable = true }

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
line-ending = "lf"
docstring-code-format = false

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "I",     # isort
  "RUF",   # Ruff-specific rules
]
ignore = [
  "Q000",   # bad-quotes-inline-string
  "Q001",   # bad-quotes-multiline-string
  "Q002",   # bad-quotes-docstring
  "Q003",   # avoidable-escaped-quote
  "W191",   # tab-indentation
  "E101",
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["solaris", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[dependency-groups]
dev = ["ruff>=0.13.0", "pytest>=9.0.1"]
